icons alignment fix - first line on text

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_sidebar.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_sidebar.scss
@@ -1,4 +1,4 @@
-.tree-nav{
+.tree-nav {
   width: 100%;
   min-height: 100%;
   padding: 3rem 1rem 3rem 0;
@@ -54,6 +54,7 @@
       > i.fa {
         position: absolute;
         left: 0;
+        top: 4px;
       }
     }
   }
